# Design_Paterns_2025

./: README.md
assignment1/: .gitignore  README.md  poetry.toml  pyproject.toml
assignment1/pvspgame/core/: creature.py  evolution.py  sim_types.py  simulation.py  types.py  visualization.py
assignment1/pvspgame/core/strategies/: chase.py  fight.py  movement.py
assignment1/pvspgame/infra/: logging_setup.py
assignment1/pvspgame/runner/: cli.py
assignment1/tests/: test_basic_attack_and_movement.py  test_combat_and_chase.py  test_evolution_and_movement_bounds.py  test_evolution_basic.py  test_movement_rules.py  test_strategies_api.py  test_strategy_greedy.py
assignment2/: .gitignore  pyproject.toml
assignment2/habit_tracker/core/: habits.py  repository.py  services.py  stats.py
assignment2/habit_tracker/infra/fastapi/: api.py  dependencies.py  schemas.py
assignment2/habit_tracker/infra/in_memory/: repository.py
assignment2/habit_tracker/runner/: app.py
assignment2/tests/: conftest.py  test_api.py  test_api_extended.py  test_core.py  test_repository.py  test_service.py  test_stats_strategies.py
assignment3/: pyproject.toml
assignment3/tests/: conftest.py
assignment3/tests/unit/: test_models.py  test_observers.py  test_station.py
assignment3/weather_system/: simulation.py
assignment3/weather_system/core/: interfaces.py  models.py
assignment3/weather_system/observers/: alerts.py  display.py
assignment3/weather_system/subject/: station.py
