[project]
name = "spore-predator-prey-simulation"
version = "0.1.0"
description = """
The assignment is inspired by the 2008 life simulation RTS game Spore (https://www.spore.com/). Spore allows you to evolve creatures with different characteristics such as claws, sharp teeth, wings, and many many more.

Simulation

Your task is to model a simple simulation of the interaction between two creatures Predator and Pray. For now, let's imagine that the shape of the world we are modeling is an infinite ray. It starts at position 0 and goes on and on as shown below.
"""
readme = "README.md"
authors = []
dynamic = ["dependencies"]
requires-python = ">=3.13"

[tool.poetry.dependencies]
typer = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
coverage = "*"
faker = "*"
hypothesis = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
]

[tool.ruff.lint.isort]
forced-separate = ["tests", "n2t"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = [
    "tests",
    "n2t/core",
    "n2t/infra",
    "n2t/runner",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true

[tool.pytest]
testpaths = [
    "tests",
]


