[project]
name = "smart-habit-tracker-api"
version = "0.1.0"
description = "Backend service for HealthyMe Smart Habit Tracker"
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.38.0",
    "typer>=0.12.0",  # kept just in case, though mostly API
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "*"
uvicorn = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
coverage = "*"
faker = "*"
hypothesis = "*"
requests = "*"
httpx = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
]
ignore = [
    "B008",  # Allow function calls in defaults (FastAPI Depends pattern)
    "PT011",  # Allow broad pytest.raises for simple test cases
]

[tool.ruff.lint.isort]
forced-separate = ["tests", "habit_tracker"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = [
    "tests",
    "habit_tracker/core",
    "habit_tracker/infra",
    "habit_tracker/runner",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true

[tool.pytest]
testpaths = [
    "tests",
]

