[project]
name = "weather-monitoring-system"
version = "0.1.0"
description = "Weather Monitoring System with Observer and Chain of Responsibility patterns"
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
coverage = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    # "T20",  # flake8-print
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
]
ignore = [
    "B008",  # Allow function calls in defaults
    "PT011",  # Allow broad pytest.raises
]

[tool.ruff.lint.isort]
forced-separate = ["tests", "weather_system"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = [
    "tests",
    "weather_system",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true

[tool.pytest]
testpaths = [
    "tests",
]

